--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>Qué imagen de la NASA eres?</title>
+    <title>Imágenes de la NASA para variar</title>
     <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
   </head>
   <body>
